[gd_scene load_steps=107 format=2]

[ext_resource path="res://Arena.gd" type="Script" id=1]
[ext_resource path="res://Hp_Fg.tres" type="StyleBox" id=2]
[ext_resource path="res://HP_Bg.tres" type="StyleBox" id=3]
[ext_resource path="res://PixelOperatorHB.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://cat fire.png" type="Texture" id=5]
[ext_resource path="res://Cat.png" type="Texture" id=6]
[ext_resource path="res://cat fist.png" type="Texture" id=7]
[ext_resource path="res://cat 2.png" type="Texture" id=8]
[ext_resource path="res://cat fist 2.png" type="Texture" id=9]
[ext_resource path="res://cat fire 2.png" type="Texture" id=10]
[ext_resource path="res://sleep2.png" type="Texture" id=11]
[ext_resource path="res://sleep3.png" type="Texture" id=12]
[ext_resource path="res://sleep1.png" type="Texture" id=13]
[ext_resource path="res://knife1.png" type="Texture" id=14]
[ext_resource path="res://knife0.png" type="Texture" id=15]
[ext_resource path="res://knife2.png" type="Texture" id=16]
[ext_resource path="res://heal1.png" type="Texture" id=17]
[ext_resource path="res://heal2.png" type="Texture" id=18]
[ext_resource path="res://sm1.png" type="Texture" id=19]
[ext_resource path="res://snacc.png" type="Texture" id=20]
[ext_resource path="res://snacc2.png" type="Texture" id=21]
[ext_resource path="res://doggo_2.png" type="Texture" id=22]
[ext_resource path="res://sm2.png" type="Texture" id=23]
[ext_resource path="res://doggo_1.png" type="Texture" id=24]
[ext_resource path="res://punch2.png" type="Texture" id=25]
[ext_resource path="res://punch1.png" type="Texture" id=26]
[ext_resource path="res://fireball1.png" type="Texture" id=28]
[ext_resource path="res://fireball2.png" type="Texture" id=29]
[ext_resource path="res://bepis1.png" type="Texture" id=30]
[ext_resource path="res://dogsleep2.png" type="Texture" id=31]
[ext_resource path="res://dogsleep.png" type="Texture" id=32]
[ext_resource path="res://Street2.png" type="Texture" id=33]
[ext_resource path="res://Street.png" type="Texture" id=34]
[ext_resource path="res://Music/Fight.ogg" type="AudioStream" id=35]
[ext_resource path="res://Sounds/heal.wav" type="AudioStream" id=36]
[ext_resource path="res://Sounds/hit1.wav" type="AudioStream" id=37]
[ext_resource path="res://Sounds/snack.wav" type="AudioStream" id=38]
[ext_resource path="res://Sounds/hit3.wav" type="AudioStream" id=39]
[ext_resource path="res://Sounds/hit2.wav" type="AudioStream" id=40]
[ext_resource path="res://Sounds/fireball.wav" type="AudioStream" id=41]
[ext_resource path="res://Sounds/bepis.wav" type="AudioStream" id=42]
[ext_resource path="res://Sounds/knife.wav" type="AudioStream" id=43]
[ext_resource path="res://rank_.tres" type="SpriteFrames" id=44]
[ext_resource path="res://wings.tres" type="SpriteFrames" id=45]
[ext_resource path="res://Cursor.png" type="Texture" id=46]
[ext_resource path="res://Buttons.tres" type="Theme" id=47]
[ext_resource path="res://BG.png" type="Texture" id=48]
[ext_resource path="res://Tree1.png" type="Texture" id=49]
[ext_resource path="res://Cosmetics/f1.png" type="Texture" id=50]
[ext_resource path="res://Tree2.png" type="Texture" id=51]
[ext_resource path="res://Sun.png" type="Texture" id=52]
[ext_resource path="res://Cloud1.png" type="Texture" id=53]
[ext_resource path="res://Cosmetics/f2.png" type="Texture" id=54]
[ext_resource path="res://Cosmetics/e1.png" type="Texture" id=55]
[ext_resource path="res://Cosmetics/e2.png" type="Texture" id=56]
[ext_resource path="res://sm3.png" type="Texture" id=57]
[ext_resource path="res://Cloud2.png" type="Texture" id=58]
[ext_resource path="res://LiterallyNothing.png" type="Texture" id=59]
[ext_resource path="res://2x2.png" type="Texture" id=60]
[ext_resource path="res://2x3.png" type="Texture" id=61]
[ext_resource path="res://2x1.png" type="Texture" id=62]
[ext_resource path="res://Textures/Heli3.png" type="Texture" id=63]
[ext_resource path="res://Textures/Heli1.png" type="Texture" id=64]
[ext_resource path="res://Textures/Heli2.png" type="Texture" id=65]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.341176, 0.341176, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.152941, 0.152941, 0.152941, 1 )
shadow_color = Color( 0, 0, 0, 0.329412 )
shadow_size = 8

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 40
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=11]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=12]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=13]
size = 48
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 0.372549, 0.372549, 1 )
shadow_size = 8

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.941176, 0.941176, 0.941176, 0 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 1 )
shadow_size = 8

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 1, 1, 1, 1 )
corner_detail = 10
shadow_color = Color( 0, 0, 0, 0.219608 )
shadow_size = 10

[sub_resource type="Theme" id=18]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 0.2 )
Button/colors/font_color_hover = Color( 1, 1, 1, 1 )
Button/colors/font_color_pressed = Color( 0.682353, 0.682353, 0.682353, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 13 )
Button/styles/disabled = SubResource( 14 )
Button/styles/focus = SubResource( 15 )
Button/styles/hover = SubResource( 16 )
Button/styles/normal = SubResource( 17 )
Button/styles/pressed = null

[sub_resource type="DynamicFont" id=19]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=20]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=21]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=22]
size = 30
outline_color = Color( 1, 0.819608, 0.705882, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=23]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=24]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 15 ) ],
"loop": true,
"name": "Knife",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 17 ) ],
"loop": true,
"name": "Heal",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": false,
"name": "Kill",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "Sleep",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": false,
"name": "Fist",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 10 ), ExtResource( 5 ) ],
"loop": false,
"name": "Fire",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 6 ) ],
"loop": true,
"name": "cat",
"speed": 3.0
} ]

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": false,
"name": "Kill",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 31 ) ],
"loop": true,
"name": "Sleep",
"speed": 3.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 30 ), ExtResource( 30 ), ExtResource( 30 ), ExtResource( 26 ) ],
"loop": false,
"name": "Bepis",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 26 ) ],
"loop": false,
"name": "Fireball",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 23 ), ExtResource( 57 ), ExtResource( 23 ), ExtResource( 19 ) ],
"loop": false,
"name": "Punch",
"speed": 10.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 20 ) ],
"loop": false,
"name": "Snacc",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 22 ) ],
"loop": true,
"name": "Doggo",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ ExtResource( 50 ), ExtResource( 54 ) ],
"loop": true,
"name": "hat1",
"speed": 5.0
}, {
"frames": [ ExtResource( 55 ), ExtResource( 56 ) ],
"loop": true,
"name": "hat2",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "0ff",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=29]

[sub_resource type="StyleBoxFlat" id=30]

[sub_resource type="DynamicFont" id=31]
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=32]
default_font = SubResource( 31 )
Dialogs/constants/button_margin = 32
Dialogs/constants/margin = 8
PopupDialog/styles/panel = SubResource( 28 )
PopupMenu/colors/font_color = Color( 1, 0.960784, 0.960784, 1 )
PopupMenu/colors/font_color_accel = Color( 0.7, 0.7, 0.7, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0.4, 0.4, 0.4, 0.8 )
PopupMenu/colors/font_color_hover = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = null
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = SubResource( 29 )
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = SubResource( 30 )
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = null

[sub_resource type="Curve2D" id=33]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 128, 512, -800.574, -17.6227, 800.574, 17.6227, 928, 64, -254.27, -161.122, 254.27, 161.122, 1824, 448, 0, 0, 0, 0, 2144, 512, 0, 0, 0, 0, 2336, 832, 0, 0, 0, 0, 160, 1184, 0, 0, 0, 0, 128, 512 )
}

[sub_resource type="SpriteFrames" id=34]
animations = [ {
"frames": [ ExtResource( 34 ), ExtResource( 33 ) ],
"loop": true,
"name": "default",
"speed": 0.5
} ]

[sub_resource type="SpriteFrames" id=35]
animations = [ {
"frames": [ ExtResource( 49 ), ExtResource( 51 ) ],
"loop": true,
"name": "default",
"speed": 0.1
} ]

[sub_resource type="Curve2D" id=36]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -96, 96, 0, 0, 0, 0, 2368, 96, 0, 0, 0, 0, 2304, -384, 0, 0, 0, 0, -64, -352, 0, 0, 0, 0, -192, -32, 0, 0, 0, 0, -96, 96 )
}

[sub_resource type="SpriteFrames" id=37]
animations = [ {
"frames": [ ExtResource( 59 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 59 ), ExtResource( 62 ), ExtResource( 60 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 59 ) ],
"loop": false,
"name": "2x",
"speed": 7.0
} ]

[sub_resource type="StyleBoxFlat" id=38]
bg_color = Color( 1, 0.34902, 0.34902, 1 )

[sub_resource type="StyleBoxFlat" id=39]
bg_color = Color( 0.188235, 0.188235, 0.188235, 1 )

[sub_resource type="DynamicFont" id=40]
size = 35
font_data = ExtResource( 4 )

[sub_resource type="Curve2D" id=41]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -171.486, 220.787, 0, 0, 0, 0, 2297.8, 231.579, 0, 0, 0, 0, 2362.89, -1006.8, 0, 0, 0, 0, -797.625, -1110.01, 0, 0, 0, 0, -169.985, 217.8 )
}

[sub_resource type="SpriteFrames" id=42]
animations = [ {
"frames": [ ExtResource( 64 ), ExtResource( 65 ), ExtResource( 63 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[node name="Arena" type="Node2D"]
script = ExtResource( 1 )

[node name="theLabel" type="Label" parent="."]
margin_left = 768.0
margin_top = 128.0
margin_right = 992.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Energy" type="ProgressBar" parent="."]
margin_left = 64.0
margin_top = 864.0
margin_right = 544.0
margin_bottom = 896.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyLabel" type="Label" parent="Energy"]
margin_left = 32.0
margin_right = 448.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoggoLife" type="ProgressBar" parent="."]
margin_left = 64.0
margin_top = 896.0
margin_right = 544.0
margin_bottom = 960.0
custom_styles/fg = ExtResource( 2 )
custom_styles/bg = ExtResource( 3 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeLabel" type="Label" parent="DoggoLife"]
margin_left = 32.0
margin_right = 480.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CattoLife" type="ProgressBar" parent="."]
margin_left = 1344.0
margin_top = 896.0
margin_right = 1888.0
margin_bottom = 960.0
custom_styles/fg = ExtResource( 2 )
custom_styles/bg = ExtResource( 3 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeLabel" type="Label" parent="CattoLife"]
margin_left = 32.0
margin_right = 544.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tail Kick" type="Button" parent="."]
margin_left = 256.0
margin_top = 992.0
margin_right = 448.0
margin_bottom = 1056.0
theme = ExtResource( 47 )
custom_fonts/font = SubResource( 7 )
text = "[1] Punch"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heal1" type="Button" parent="."]
margin_left = 512.0
margin_top = 992.0
margin_right = 704.0
margin_bottom = 1056.0
theme = ExtResource( 47 )
custom_fonts/font = SubResource( 8 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Punch" type="Button" parent="."]
margin_left = 800.0
margin_top = 992.0
margin_right = 992.0
margin_bottom = 1056.0
theme = ExtResource( 47 )
custom_fonts/font = SubResource( 9 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thorns" type="Button" parent="."]
margin_left = 1088.0
margin_top = 992.0
margin_right = 1280.0
margin_bottom = 1056.0
theme = ExtResource( 47 )
custom_fonts/font = SubResource( 10 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fireball" type="Button" parent="."]
margin_left = 1376.0
margin_top = 992.0
margin_right = 1568.0
margin_bottom = 1056.0
theme = ExtResource( 47 )
custom_fonts/font = SubResource( 11 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Super Heal" type="Button" parent="."]
margin_left = 1664.0
margin_top = 992.0
margin_right = 1856.0
margin_bottom = 1056.0
theme = ExtResource( 47 )
custom_fonts/font = SubResource( 12 )
disabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sleep" type="Button" parent="."]
margin_left = 32.0
margin_top = 992.0
margin_right = 224.0
margin_bottom = 1056.0
theme = SubResource( 18 )
custom_fonts/font = SubResource( 19 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "[+] Sleep"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rank" type="Label" parent="."]
margin_left = 1632.0
margin_right = 1856.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 20 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RankPlus" type="Label" parent="Rank"]
margin_left = -224.0
margin_top = -64.0
margin_right = -96.0
custom_fonts/font = SubResource( 21 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RankName" type="Label" parent="Rank"]
margin_left = 64.0
margin_top = 32.0
margin_right = 192.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 22 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabPoints" type="Label" parent="."]
margin_right = 256.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plus" type="Label" parent="LabPoints"]
margin_left = 352.0
margin_top = 32.0
margin_right = 480.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cat" type="AnimatedSprite" parent="."]
position = Vector2( 1536, 672 )
scale = Vector2( 25.5, 25.5 )
frames = SubResource( 25 )
animation = "cat"
__meta__ = {
"_edit_lock_": true
}

[node name="Doggo" type="AnimatedSprite" parent="."]
position = Vector2( 384, 672 )
scale = Vector2( 25, 25 )
frames = SubResource( 26 )
animation = "Punch"
frame = 4
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 35 )
volume_db = -5.0
autoplay = true
bus = "Music"

[node name="Sounds" type="Node2D" parent="."]

[node name="bepis" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 42 )
bus = "Sounds"

[node name="fireball" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 41 )
bus = "Sounds"

[node name="heal" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 36 )
bus = "Sounds"

[node name="hit1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 37 )
bus = "Sounds"

[node name="hit2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 40 )
bus = "Sounds"

[node name="hit3" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 39 )
bus = "Sounds"

[node name="knife" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 43 )
bus = "Sounds"

[node name="snack" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 38 )
bus = "Sounds"

[node name="fire" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 38 )
pitch_scale = 0.57
bus = "Sounds"

[node name="Rank2" type="AnimatedSprite" parent="."]
position = Vector2( 1888, 32 )
scale = Vector2( 5, 5 )
frames = ExtResource( 44 )
animation = "Challenger"
playing = true

[node name="DoggoWings" type="AnimatedSprite" parent="."]
position = Vector2( 256, 576 )
scale = Vector2( 26, 26 )
frames = ExtResource( 45 )
animation = "02"
frame = 2
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="Wings" type="AnimatedSprite" parent="."]
position = Vector2( 1664, 544 )
scale = Vector2( 26.625, 26.125 )
frames = ExtResource( 45 )
animation = "off"
playing = true
flip_h = true

[node name="Hat" type="AnimatedSprite" parent="."]
position = Vector2( 1376, 384 )
scale = Vector2( 25.0625, 24 )
frames = SubResource( 27 )
animation = "0ff"
playing = true

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_right = 244.0
margin_bottom = 62.0
rect_scale = Vector2( 2.1, 1.6 )
theme = SubResource( 32 )
window_title = "Help"
dialog_text = "Hello gamera"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
margin_left = -32.0
margin_top = -640.0
margin_right = 2048.0
margin_bottom = 1152.0
mouse_filter = 2
texture = ExtResource( 48 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Path2D" type="Path2D" parent="TextureRect"]
position = Vector2( 32, 640 )
curve = SubResource( 33 )

[node name="PathFollow2D" type="PathFollow2D" parent="TextureRect/Path2D"]
position = Vector2( 128, 512 )
rotation = -1.53827
rotate = false

[node name="Sun" type="Sprite" parent="TextureRect/Path2D/PathFollow2D"]
rotation = 1.53764
scale = Vector2( 14.5, 14.5 )
texture = ExtResource( 52 )

[node name="Street" type="AnimatedSprite" parent="TextureRect"]
position = Vector2( 960, 1120 )
scale = Vector2( 19.25, 22.25 )
frames = SubResource( 34 )
frame = 1
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="TextureRect"]
repeat = true
playback/repeat = true

[node name="Tree1" type="AnimatedSprite" parent="."]
position = Vector2( 896, 512 )
scale = Vector2( 20.5, 18.5 )
frames = SubResource( 35 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tree2" type="AnimatedSprite" parent="."]
position = Vector2( 0, 550 )
scale = Vector2( 14.25, 13.25 )
frames = SubResource( 35 )

[node name="Tree3" type="AnimatedSprite" parent="."]
position = Vector2( 1920, 550 )
scale = Vector2( 14.25, 13.25 )
frames = SubResource( 35 )

[node name="Clouds" type="Node2D" parent="."]

[node name="C1" type="Path2D" parent="Clouds"]
curve = SubResource( 36 )

[node name="C1follow" type="PathFollow2D" parent="Clouds/C1"]
position = Vector2( -96, 96 )
rotate = false

[node name="Sprite" type="Sprite" parent="Clouds/C1/C1follow"]
position = Vector2( 224, 128 )
scale = Vector2( 10.1, 10.1 )
texture = ExtResource( 53 )

[node name="C2follow" type="PathFollow2D" parent="Clouds/C1"]
position = Vector2( -96, 96 )
rotate = false

[node name="Cloud2" type="Sprite" parent="Clouds/C1/C2follow"]
position = Vector2( -64, 64 )
scale = Vector2( 9.46, 11.7 )
texture = ExtResource( 58 )

[node name="2x" type="AnimatedSprite" parent="."]
position = Vector2( 640, 320 )
scale = Vector2( 16.5, 20.5 )
frames = SubResource( 37 )
playing = true

[node name="SpecialAttack" type="ProgressBar" parent="."]
margin_left = 704.0
margin_top = 32.0
margin_right = 1152.0
margin_bottom = 64.0
custom_styles/fg = SubResource( 38 )
custom_styles/bg = SubResource( 39 )
max_value = 3.0
step = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability" type="Label" parent="."]
margin_left = 672.0
margin_top = 64.0
margin_right = 1184.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 40 )
text = "Reach Silver to unlock abilities"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeliPath" type="Path2D" parent="."]
curve = SubResource( 41 )

[node name="HeliFollow" type="PathFollow2D" parent="HeliPath"]
position = Vector2( -171.486, 220.787 )
rotation = 0.004362

[node name="Heli" type="AnimatedSprite" parent="HeliPath/HeliFollow"]
position = Vector2( 75.6412, 34.8863 )
scale = Vector2( 10.5691, 10.3335 )
frames = SubResource( 42 )
frame = 2
playing = true

[node name="Cursor" type="Sprite" parent="."]
texture = ExtResource( 46 )
[connection signal="pressed" from="Tail Kick" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Heal1" to="." method="_on_Simple_Heal_pressed"]
[connection signal="pressed" from="Punch" to="." method="_on_Power_Punch_pressed"]
[connection signal="pressed" from="Thorns" to="." method="_on_Thorns_pressed"]
[connection signal="pressed" from="Fireball" to="." method="_on_Fireball_pressed"]
[connection signal="pressed" from="Super Heal" to="." method="_on_Super_Heal_pressed"]
[connection signal="pressed" from="Sleep" to="." method="_on_Sleep_pressed"]
[connection signal="mouse_entered" from="AcceptDialog" to="." method="_on_AcceptDialog_mouse_entered"]
[connection signal="mouse_exited" from="AcceptDialog" to="." method="_on_AcceptDialog_mouse_exited"]
